Fixed upload screen alignment

--- a/react-test-project/src/index.css
+++ b/react-test-project/src/index.css
@@ -10,22 +10,19 @@ body {
 }
 
 .container {
-
   max-width:80%;
-
   display: flex;
   margin: 20px auto;
   /* overflow: auto; */
-
   width:60%;
   min-height:200px;
   border: 1.5px solid #00467F;
   /*padding: 30px;*/
   border-radius: 4px;
-
   justify-content: center;
   flex-direction: column;
-
+  text-align:center;
+  background-color:#F2F2F2;
 }
 
 .box2 {
